Added proper schemas
